cabal-version:      2.4
name:               Hamaze
version:            0.1.0.0
synopsis: A command line maze generator written in Haskell
license: BSD-3-Clause
license-file: LICENSE
author: Roman Zupancic
maintainer: roman.k.zupancic@gmail.com
copyright: 2021 Roman Zupancic

extra-source-files:
    README.md
    CHANGELOG.md

common build
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends: base ^>= 4.14.3.0

library
    import: build
    exposed-modules: 
      MazeGen,
      MazeDisplay
    hs-source-dirs: src
    build-depends: random

executable Hamaze
    import: build
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
      Hamaze

